# hello-world-gtk-mobile

./: .anjuta_sym_db.db  Makefile  Makefile.in  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
Debug/: Makefile  config.status  libtool
Debug/po/: Makefile  Makefile.in  POTFILES
Debug/src/: Makefile
Debug/src/.deps/: main.Po
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  hello_world.ui  hello_world.ui~  main.c
src/.deps/: main.Po
